samples/_failures_safe/1761597916_a654e4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_baabe8e4.c: In function ‘main’:
./samples/SAFE/__tmp_baabe8e4.c:152:9: error: expected declaration or statement at end of input
  152 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_baabe8e4.c:152:9: error: expected declaration or statement at end of input
